# luagran-tilde

./: README.md
examples/: 2dGaussJit.lua  2dGaussVisual.maxpat  2dGaussVisualV2.maxpat  8Chan.lua  ARGran.lua  ARGranDur.lua  ARGranRate.lua  AdaptiveMatrix.lua  ArimaGran.lua  CircularBuffer.lua  CovGran.lua  CovGranFM.lua  GaussJit.lua  HarmonGran.lua  HarmonGran.maxpat  arGran.maxpat  matrix.lua  mvGauss-4.maxpat  mvGauss.maxpat  npan.lua  test.lua  testmultichan.lua  testmultichan.maxpat  visualizeAR.lua  xyGauss.js  xyGauss.lua
help/: luagran~.maxhelp  mymod.lua  template.lua  template_fm.lua  template_fm_multichan.lua  template_multichan.lua
luagran~/: CMakeLists.txt  luagran~.c
pd/: Makefile  luagran_tilde_help.pd  luagran~.c  luagran~.pd_linux  template.lua
src/: luagran~.c
